Implement backend task ETA calculations, sequential step offsets, and SOP frequency default windows